# crossword

./: .gitignore  Dockerfile  Makefile  README.md  app.py  package-lock.json  package.json  pyproject.toml  run.py  scraper.py  start.sh  vitest.config.js  work_in_progress.py
src/: app.py  scraper.py  work_in_progress.py
src/crossword/: __init__.py  app.py  crossword_builder.py  data_reader.py  entity.py
src/crossword/static/: main.js  styles.css
src/crossword/static/tests/: main.test.js
src/crossword/templates/: newapp.html
src/static/: main.js  script.js  styles.css
src/templates/: newapp.html
static/: script.js  styles.css
templates/: app.html  newapp.html
tests/: conftest.py  factories.py  test_crossword_builder.py  test_rebus_grid.py
