[tool.poetry]
name = "crossword-app"
version = "0.1.0"
description = "A Flask application for crossword puzzles"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.0"
requests = "^2.31.0"
uvicorn = "^0.25.0"
pydantic = "^2.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"